force-app/main/default/objects/ContractDailyRateHistory__c/ContractDailyRateHistory__c.object-meta.xml
<CustomObject>
    <label>Contract Daily Rate History</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Daily Rate Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>