force-app/main/default/objects/ContractDailyRateHistory__c/fields/EscalationIndex__c.field-meta.xml
<CustomField>
    <fullName>EscalationIndex__c</fullName>
    <label>Escalation Index</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>