force-app/main/default/objects/ContractDailyRateHistory__c/fields/Index1__c.field-meta.xml
<CustomField>
    <fullName>Index1__c</fullName>
    <label>Index¹</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>