force-app/main/default/objects/ContractDailyRateHistory__c/fields/Index2__c.field-meta.xml
<CustomField>
    <fullName>Index2__c</fullName>
    <label>Index²</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>