force-app/main/default/objects/ContractDailyRateHistory__c/fields/Index3__c.field-meta.xml
<CustomField>
    <fullName>Index3__c</fullName>
    <label>Index³</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>