force-app/main/default/objects/ContractDailyRateHistory__c/fields/VesselContract__c.field-meta.xml
<CustomField>
    <fullName>VesselContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vessel Contract</label>
    <referenceTo>VesselContract__c</referenceTo>
    <relationshipLabel>Contract Daily Rate Histories</relationshipLabel>
    <relationshipName>Contract_Daily_Rate_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>